# Efficient-LLM-Inferencing-on-GPUs

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
src/: main.cu
src/attention/: attention.cu  attention_cpu.cu  fmha.h  fmha_fprop_kernel_1xN.h  fmha_fwd_hdim128.cu  fmha_fwd_hdim32.cu  fmha_fwd_hdim64.cu  fmha_fwd_launch_template.h  fmha_kernel.h
src/attention/fmha/: alibi.h  (+5 more)
src/attention_v2/: alibi.h  attention_v2.cu  flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_hdim160_fp16_sm80.cu  flash_fwd_hdim192_fp16_sm80.cu  flash_fwd_hdim224_fp16_sm80.cu  flash_fwd_hdim256_fp16_sm80.cu  flash_fwd_hdim32_fp16_sm80.cu  flash_fwd_hdim64_fp16_sm80.cu  flash_fwd_hdim96_fp16_sm80.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  kernel_traits.h  kernel_traits_sm90.h  softmax.h  static_switch.h  utils.h
src/common/: common.h  cuda_timer.h  logging.h  tensor.h  tester.h  util.h
src/decoding_attn/: block_info.h  decoding.h  decoding_attn.cu  decoding_fwd_hdim128.cu  decoding_fwd_hdim256.cu  decoding_fwd_hdim64.cu  decoding_fwd_hdim96.cu  decoding_fwd_kernel.h  decoding_fwd_launch_template.h  kernel_traits.h  static_switch.h
src/decoding_attn_int8/: block_info.h  decoding_attn_int8.cu  decoding_int8.h  decoding_int8_fwd_hdim128.cu  decoding_int8_fwd_hdim256.cu  decoding_int8_fwd_hdim64.cu  decoding_int8_fwd_kernel.h  decoding_int8_fwd_launch_template.h  kernel_traits.h  static_switch.h  util.h
src/decoding_attn_new/: block_info.h  decoding.cu  decoding.h  decoding_fwd_hdim128.cu  decoding_fwd_hdim256.cu  decoding_fwd_hdim64.cu  decoding_fwd_hdim96.cu  decoding_kernel.h  decoding_launch_template.h  kernel_traits.h
src/flash_attn/: flash_attn.cu  fmha.h  fmha_fprop_kernel_1xN.h  fmha_fwd_hdim128.cu  fmha_fwd_hdim32.cu  fmha_fwd_hdim64.cu  fmha_fwd_launch_template.h  fmha_kernel.h  fmha_utils.h  static_switch.h
src/flash_attn_new/: block_info.h  flash_attn.cu  flash_attn.h  flash_params.h  kernel_traits.h  softmax.h  static_switch.h  utils.h
src/flash_attn_v2/: block_info.h  flash.h  flash_attn_v2.cu  flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_hdim160_fp16_sm80.cu  flash_fwd_hdim192_fp16_sm80.cu  flash_fwd_hdim224_fp16_sm80.cu  flash_fwd_hdim256_fp16_sm80.cu  flash_fwd_hdim32_fp16_sm80.cu  flash_fwd_hdim64_fp16_sm80.cu  flash_fwd_hdim96_fp16_sm80.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  softmax.h
(+20 files in other folders)
